# shader_playground

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_flags.txt  execute.sh  imgui.ini
docs/exampleShaders/claude/water/: waterFinal.frag
include/glad/: glad.h
include/shader_playground/graphics/: camera.hpp  shader.hpp
include/shader_playground/gui/: core.hpp
src/: CMakeLists.txt  glad.c  main.cpp
